deploy/codefolio/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefolio
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns01
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kakde.eu
      secretName: kakde-eu-tls
  rules:
    - host: kakde.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codefolio
                port:
                  number: 80
